Certificado ASP.NET Core Clean Architecture y Azure Services

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -33,12 +33,13 @@
   "cert.pretitle": "Verified Credentials",
   "cert.title": "Certifications",
   "cert.subtitle": "Professional certifications that validate my experience and knowledge",
-  "cert.cert1.title": ".NET Backend: .NET Core, SQL Server and JWT Security",
-  "cert.cert2.title": "Scrum Fundamentals Certification",
-  "cert.cert3.title": "Cloud Computing",
-  "cert.cert4.title": "Python Fundamentals",
-  "cert.cert5.title": "Introduction to Cybersecurity",
-  "cert.cert6.title": "Technical Professional in Computing and Informatics",
+  "cert.cert1.title": "ASP.NET Core Web Api with Clean Architecture and Azure Services",
+  "cert.cert2.title": ".NET Backend: .NET Core, SQL Server and JWT Security",
+  "cert.cert3.title": "Scrum Fundamentals Certification",
+  "cert.cert4.title": "Cloud Computing",
+  "cert.cert5.title": "Python Fundamentals",
+  "cert.cert6.title": "Introduction to Cybersecurity",
+  "cert.cert7.title": "Technical Professional in Computing and Informatics",
 
   "contact.title": "Contact",
   "contact.subtitle": "Got a project in mind or just want to say hi? Feel free to reach out!",
