--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -33,12 +33,13 @@
   "cert.pretitle": "Credenciales Verificadas",
   "cert.title": "Certificaciones",
   "cert.subtitle": "Certificaciones profesionales que validan mi experiencia y conocimientos",
-  "cert.cert1.title": ".NET Backend: .NET Core, SQL Server y Seguridad JWT",
-  "cert.cert2.title": "Certificación en Fundamentos de Scrum",
-  "cert.cert3.title": "Computación en la Nube",
-  "cert.cert4.title": "Fundamentos de Python",
-  "cert.cert5.title": "Introducción a la Ciberseguridad",
-  "cert.cert6.title": "Profesional Técnico en Computación e Informática",
+  "cert.cert1.title": "ASP.NET Core Web Api con Clean Architecture y Azure Services",
+  "cert.cert2.title": ".NET Backend: .NET Core, SQL Server y Seguridad JWT",
+  "cert.cert3.title": "Certificación en Fundamentos de Scrum",
+  "cert.cert4.title": "Computación en la Nube",
+  "cert.cert5.title": "Fundamentos de Python",
+  "cert.cert6.title": "Introducción a la Ciberseguridad",
+  "cert.cert7.title": "Profesional Técnico en Computación e Informática",
 
   "contact.title": "Contacto",
   "contact.subtitle": "¿Tienes un proyecto en mente o solo quieres saludar? ¡No dudes en contactarme!",
